<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_blue_authorization"
    android:orientation="vertical"
    tools:context=".ui.registration.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tv_back"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tv_registration"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/hint_name_reg"
            android:inputType="text"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <EditText
            android:id="@+id/edt_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/hint_surname_reg"
            android:inputType="text"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_birthday"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:gravity="center_horizontal"
                android:hint="@string/hint_day"
                android:inputType="number"
                android:maxLength="22"
                android:padding="5dp"
                android:textColor="@color/white_blue_authorization"
                android:textColorHint="@color/white_gray_authorization" />

            <EditText
                android:id="@+id/edt_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:gravity="center_horizontal"
                android:hint="@string/hint_month"
                android:inputType="number"
                android:maxLength="22"
                android:padding="5dp"
                android:textColor="@color/white_blue_authorization"
                android:textColorHint="@color/white_gray_authorization" />

            <EditText
                android:id="@+id/edt_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:gravity="center_horizontal"
                android:hint="@string/hint_month"
                android:inputType="number"
                android:maxLength="22"
                android:padding="5dp"
                android:textColor="@color/white_blue_authorization"
                android:textColorHint="@color/white_gray_authorization" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/hint_email_reg"
            android:inputType="textEmailAddress"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/hint_tel"
            android:inputType="phone"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/hint_login_reg"
            android:inputType="text"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/hint_password_reg"
            android:inputType="textPassword"
            android:maxLength="22"
            android:padding="9dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_sign"
            android:text="@string/text_registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
