<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_blue_authorization"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    tools:context=".ui.authorization.AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/personal_data"
            android:textColor="@color/white_gray_authorization"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/input"
            android:hint="@string/hint_login"
            android:inputType="text"
            android:maxLength="22"
            android:padding="10dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="22"
            android:padding="10dp"
            android:textColor="@color/white_blue_authorization"
            android:textColorHint="@color/white_gray_authorization" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/txt_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textColor="@color/white_gray_authorization"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/white_gray_authorization"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/input_sign"
            android:text="@string/to_come_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    
</LinearLayout>