<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.transaction.TransactionActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/btn_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            app:itemIconTint="@color/white"
            app:menu="@menu/button_navigation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_navigation"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/history_blue"
                android:gravity="right">

                <ImageView
                    android:id="@+id/img_filter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_filter"
                    android:backgroundTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/history_blue">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/transactions_history"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="-18dp"
                android:background="@drawable/toolbar_shape" />

            <LinearLayout
                android:id="@+id/ll_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/transactions_filter_by_date"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/input_filter"
                        android:hint="@string/transactions_edt_start"
                        android:inputType="date"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                    <EditText
                        android:id="@+id/edt_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_filter"
                        android:hint="@string/transactions_edt_end"
                        android:inputType="date"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_background"
                        android:elevation="10dp"
                        android:stateListAnimator="@null"
                        android:text="Отменить"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_background"
                        android:elevation="10dp"
                        android:stateListAnimator="@null"
                        android:text="Применить"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/white_blue_authorization"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white_blue_authorization"
                app:tabTextColor="@color/black" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>